Fix SolrConnection dependencies, add war to build